tools/fleet/fixtures/packets/invalid/missing-launch-command.case
source=valid-work.packet
mutation=remove Launch-Command
expected=invalid
